<resources>
    <string name="app_name">一定中</string>
    <string name="home">首页</string>
    <string name="category">类别</string>
    <string name="latest_lottery">最新开奖</string>
    <string name="shopping_car">购物车</string>
    <string name="wode">我的</string>
    <string name="name_label">尊敬的会员：</string>
    <string name="chongzhihaoli">充值好礼</string>
    <string name="gain_points">赚取积分</string>
    <string name="chongzhi_tips">新用户首次充值50元领现金红包</string>
    <string name="points_tips">账户积分在积分商城可随意兑换礼品</string>
    <string name="processing">进行中</string>
    <string name="processed">已揭晓</string>
    <string name="to_be_receive">待收货</string>
    <string name="to_be_published">待晒单</string>
    <string name="duobao_record">夺宝记录</string>
    <string name="lucky_record">幸运记录</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="home_label">一定中夺宝商城</string>
    <string name="latest_lottery_label">最新开奖</string>
    <string name="category_label">全部类别</string>
    <string name="shopping_car_label">购物车</string>
    <string name="more_with_icon"><![CDATA[更多>]]></string>
    <string name="congratulation">恭喜</string>
    <string name="get">获得</string>
    <string name="period_num_with_bracket">（第%d期）</string>
    <string name="period_num">第%d期</string>
    <string name="lucky_code">幸运号码：</string>
    <string name="colon">：</string>
    <string name="drawn_countdown">揭秘倒计时</string>
    <string name="points_earn">积分赚不停</string>
    <string name="welcome_to_yidingzhong">欢迎来到一定中夺宝商城</string>
    <string name="login_register">登录注册</string>
    <string name="hyzx_shdz">收货地址</string>
    <string name="my_redpacket">我的红包</string>
    <string name="cz_record">充值记录</string>
    <string name="jf_record">积分纪录</string>
    <string name="user_login">用户登录</string>
    <string name="get_back_password">找回密码</string>
    <string name="user_settings">用户中心-设置</string>
    <string name="check_version">检测版本</string>
    <string name="recharge_label">充值好礼</string>
    <string name="duobao_ing">夺宝进行中</string>
    <string name="check_order">查看订单</string>
    <string name="student_region">学生专区</string>
    <string name="rich_man_region">富豪专区</string>
    <string name="saidan_share">嗮单分享</string>
    <string name="product_detail">商品详情</string>
    <string name="daily_check">每日签到</string>
    <string name="daily_check_tips">可获得10积分，连续一周签到还有奖品</string>
    <string name="share_app">分享app</string>
    <string name="share_app_tips">分享给好友，每日每平台可得10积分</string>
    <string name="share_order">分享晒单</string>
    <string name="share_order_tips">每次可以获得10积分，每日可以分享两次</string>
    <string name="recharge_award">充值奖励</string>
    <string name="recharge_award_tips">每充值1元可获得10积分</string>
    <string name="publish">晒单</string>
    <string name="publish_tips">晒单通过审核获得50积分</string>
    <string name="shipping_address">收货地址</string>
    <string name="modify_recipient_profile">修改收件人资料</string>
    <string name="address_tips">请务必填写您正确的收件人信息</string>
    <string name="not_used">未使用</string>
    <string name="will_be_available">将可用</string>
    <string name="expire_or_used">已用/过期</string>
    <string name="recharge_record">充值记录</string>
    <string name="points_record">积分记录</string>
    <string name="system_message">系统消息</string>
    <string name="contact_kefu">联系客服</string>
    <string name="help_center">帮助中心</string>
    <string name="share_with_friends">分享给好友</string>
    <string name="lack_of_url">缺少URL</string>
    <string name="points_mall">积分商城</string>
    <string name="points_mall_detail">积分商城_商品详情</string>
    <string name="member_center_share">会员中心-我要晒单</string>
    <string name="comment_hint">此刻你的心情想必一定很激动吧，独乐乐不如众乐乐，赶快发表出来让大伙也高兴高兴吧...</string>
    <string name="comment_upload_image_tips">尊敬的会员，俗话说，有图有真相，请至少上传6张以上照片哦</string>
    <string name="daily_check_explanation">签到说明</string>
    <string name="daily_check_description">1.每日登陆后即可签到，签到可随机获得一个签到礼\n2.如果当日
    忘记签到，可在日后补签\n3.每次补签需要支付两个夺宝币，补签可计入连续签到天数，也可获得签到礼\n4.
    签到奖励包括1到100元随机红包，1到100元随机夺宝币、实物奖励\n5.连续签到的天数越多，获得大奖的概率也越大</string>
    <string name="gift_pack_award">1.当月累计签到7天、14天、21天、满勤，即可解锁神秘大礼包，有机会获得超值大奖；\n2.
    开启神秘大礼包，有机会获得：Apple苹果耳机、Apple iPad平板电脑、Apple iPhone7手机、Apple Mac笔记本电脑等惊喜大奖</string>
    <string name="activity_explanation">1.活动主办方将在法律允许的范围内，对活动作出必要的说明和解释，如遇不可抗的因素，活动主办方拥有
    取消本次活动权利</string>
    <string name="register_label">新用户注册</string>
    <string name="register">注册</string>
    <string name="bailing_region">白领专区</string>
</resources>
