<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#efefef"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/fill_white_borderless_corners_8">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/laba"/>
                    <ViewFlipper
                        android:id="@+id/vf_duobao"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:autoStart="true"
                        android:background="#fff"
                        android:flipInterval="2500"
                        android:inAnimation="@anim/tv_down_in"
                        android:outAnimation="@anim/tv_top_out" >
                    </ViewFlipper>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_choujiang"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_jfsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jfsc"/>
                <ImageView
                    android:id="@+id/iv_jfzbt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/jfzbt"/>
                <ImageView
                    android:id="@+id/iv_jfsm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jfsm"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lp_bj">
                <ImageView
                    android:id="@+id/choujiangpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/lpcj"/>
                <ImageView
                    android:id="@+id/iv_choujiang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/zhizheng"/>
            </RelativeLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/jfqsz"/>
            <LinearLayout
                android:id="@+id/choujiang"
                style="@style/choujiang_footer_item">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qiandao"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/daily_check"
                        style="@style/choujiang_footer_item_title"/>
                    <TextView
                        style="@style/choujiang_footer_item_sub_title"
                        android:text="@string/daily_check_tips"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_chevron_right_gray_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_app"
                style="@style/choujiang_footer_item">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/share_app"
                        style="@style/choujiang_footer_item_title"/>
                    <TextView
                        style="@style/choujiang_footer_item_sub_title"
                        android:text="@string/share_app_tips"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_chevron_right_gray_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_order"
                style="@style/choujiang_footer_item">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fxsd"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/share_order"
                        style="@style/choujiang_footer_item_title"/>
                    <TextView
                        style="@style/choujiang_footer_item_sub_title"
                        android:text="@string/share_order_tips"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_chevron_right_gray_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/recharge_award"
                style="@style/choujiang_footer_item">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cz"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/recharge_award"
                        style="@style/choujiang_footer_item_title"/>
                    <TextView
                        style="@style/choujiang_footer_item_sub_title"
                        android:text="@string/recharge_award_tips"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_chevron_right_gray_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/publish"
                style="@style/choujiang_footer_item"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sd"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/publish"
                        style="@style/choujiang_footer_item_title"/>
                    <TextView
                        style="@style/choujiang_footer_item_sub_title"
                        android:text="@string/publish_tips"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_chevron_right_gray_24dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>