<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />
    <!-- 内容部分， fragment切换 -->

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_above="@+id/ll_bottom_tab"
        android:orientation="vertical"></LinearLayout>
    <View
        android:layout_above="@id/ll_bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dfdfdf"/>
    <LinearLayout
        android:id="@+id/ll_bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottom_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bottom_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_home_tab_selected"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/tv_bottom_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/bottom_tab_selected"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tab_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bottom_tab_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_category_tab_normal"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/tv_bottom_tab_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tab_latest_lottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bottom_tab_latest_lottery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_latest_lottery_tab_normal"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/tv_bottom_tab_latest_lottery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_lottery"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tab_shopping_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bottom_tab_shopping_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_shopping_car_tab_normal"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/tv_bottom_tab_shopping_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_car"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_bottom_tab_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_personal_center_normal"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/tv_bottom_tab_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wode"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
